Set up evaluation notebook for Colab

--- a/12. modeling.ipynb
+++ b/12. modeling.ipynb
@@ -201,7 +201,7 @@
     "                     max_trials=max_trials,\n",
     "                     executions_per_trial=executions_per_trial,\n",
     "                     directory='keras-tuner', \n",
-    "                     project_name='attentive')"
+    "                     project_name='attentive-4')"
    ]
   },
   {
