--- a/13. evaluating.ipynb
+++ b/13. evaluating.ipynb
@@ -1,23 +1,38 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Bad key \"text.kerning_factor\" on line 4 in\n",
-      "/home/zafir/miniconda3/envs/tensorflow/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test_patch.mplstyle.\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.1.3/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n"
-     ]
-    }
-   ],
+   "source": [
+    "## Google Colab utils\n",
+    "## *Don't forget to set GPU*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/gdrive')\n",
+    "%cd \"/gdrive/My Drive/air-pollution\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -28,21 +43,30 @@
     "from tensorflow.keras.layers import Bidirectional, RepeatVector, Dot, Activation\n",
     "from tensorflow.keras.layers import Concatenate, Flatten\n",
     "\n",
-    "from tensorflow.keras.callbacks import TensorBoard, EarlyStopping, ModelCheckpoint\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "import tensorflow.keras.backend as K\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy.ndimage.interpolation import shift\n",
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime\n",
-    "from utils import *"
+    "from utils import *\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_folder_structure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,44 +102,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batch_size = 64\n",
-    "epochs = 150\n",
-    "patience = 10"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Standard"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Standard Train Model\n",
+    "\n",
     "First, using the best hyperparameters found during the random search, we fine tune the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "latent_dim = 64\n",
-    "dense_dropout_rate = 0.1\n",
+    "dense_dropout_rate = 0.25\n",
     "learning_rate = 0.000219"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -156,73 +164,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "!rm -rf \"./logs/standard\""
+    "timestamp = datetime.now().strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
+    "print(f'Starting training at: {timestamp}')\n",
+    "\n",
+    "history = model.fit(x=[train_encoder_input_data, \n",
+    "                       train_decoder_input_data], \n",
+    "                    y=train_decoder_target_data,\n",
+    "                    validation_data=([\n",
+    "                       valid_encoder_input_data,\n",
+    "                       valid_decoder_input_data],\n",
+    "                       valid_decoder_target_data),\n",
+    "                    batch_size=64,\n",
+    "                    epochs=100,\n",
+    "                    callbacks=[ModelCheckpoint(f'./checkpoints/standard/{timestamp}.h5', \n",
+    "                                               save_best_only=True)])\n",
+    "\n",
+    "with open(f'./histories/standard/{timestamp}.pkl', 'wb') as output:\n",
+    "    pickle.dump(history.history, output)\n",
+    "    \n",
+    "with open(f'./histories/standard/results.csv', 'a') as file:\n",
+    "    min_epoch = np.argmin(history.history['val_loss'])\n",
+    "    file.write(f\"{timestamp}, {min_epoch}, {history.history['loss'][min_epoch]}, {history.history['val_loss'][min_epoch]}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 60677 samples, validate on 3388 samples\n",
-      "60677/60677 [==============================] - 21s 348us/sample - loss: 0.0647 - val_loss: 0.0455\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f418130a550>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "model.fit(x=[train_encoder_input_data, \n",
-    "            train_decoder_input_data], \n",
-    "          y=train_decoder_target_data,\n",
-    "          validation_data=([\n",
-    "            valid_encoder_input_data,\n",
-    "            valid_decoder_input_data],\n",
-    "            valid_decoder_target_data),\n",
-    "          batch_size=batch_size,\n",
-    "          epochs=3,\n",
-    "          callbacks=[EarlyStopping(monitor='val_loss', \n",
-    "                                  patience=patience, \n",
-    "                                  verbose=1),\n",
-    "                     ModelCheckpoint('./checkpoints/standard.h5', \n",
-    "                                     save_best_only=True),\n",
-    "                     TensorBoard(log_dir=\"./logs/standard\", \n",
-    "                                 histogram_freq=1)]\n",
-    "         )"
+    "with open(f'./histories/standard/{timestamp}.pkl', 'rb') as inp:\n",
+    "    history = pickle.load(inp)\n",
+    "\n",
+    "plt.figure(figsize=(15, 7))\n",
+    "plt.plot(history['loss'])\n",
+    "plt.plot(history['val_loss'])\n",
+    "plt.title('Model loss')\n",
+    "plt.ylabel('loss')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'val'], loc='upper right')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Standard Inference Model\n",
+    "\n",
     "Now, load the best (trained) model, obtain the layers and build an inference model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_model = load_model('./checkpoints/standard.h5')\n",
+    "best_model = load_model('./checkpoints/standard/2020-06-03-13-44-14.h5')\n",
     "\n",
     "encoder_lstm = best_model.get_layer('encoder_lstm')\n",
     "decoder_lstm = best_model.get_layer('decoder_lstm')\n",
@@ -232,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,20 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.77496666"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred = inference_model.predict([test_encoder_input_data, test_decoder_input_data])\n",
     "y_pred = format_model_output(y_pred)\n",
@@ -297,12 +291,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Attentive"
+    "## Attentive Train Model\n",
+    "\n",
+    "First, using the best hyperparameters found during the random search, we fine tune the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -404,29 +400,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, using the best hyperparameters found during the random search, we fine tune the model."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "encoder_latent_dim = 64\n",
-    "decoder_latent_dim = 64\n",
+    "decoder_latent_dim = 96\n",
     "attention_dense_dim = 12\n",
-    "seq_dropout_rate = 0.2\n",
+    "seq_dropout_rate = 0.4\n",
     "dense_dropout_rate = 0.2\n",
-    "learning_rate = 0.005"
+    "learning_rate = 0.002"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,73 +448,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm -rf \"./logs/attentive\""
+    "timestamp = datetime.now().strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
+    "print(f'Starting training at: {timestamp}')\n",
+    "\n",
+    "history = model.fit(x=[train_encoder_input_data, \n",
+    "                       train_decoder_input_data,\n",
+    "                       h0_train, c0_train], \n",
+    "                    y=train_attentive_decoder_target_data,\n",
+    "                    validation_data=([\n",
+    "                       valid_encoder_input_data,\n",
+    "                       valid_decoder_input_data, \n",
+    "                       h0_val, c0_val],\n",
+    "                       valid_attentive_decoder_target_data),\n",
+    "                    batch_size=64,\n",
+    "                    epochs=30,\n",
+    "                    verbose=0,\n",
+    "                    callbacks=[LossPrintingCallback(Ty),\n",
+    "                               ModelCheckpoint(f'./checkpoints/attentive/{timestamp}/cpt',\n",
+    "                                               save_weights_only=True,\n",
+    "                                               save_best_only=True)])\n",
+    "\n",
+    "with open(f'./histories/attentive/{timestamp}.pkl', 'wb') as output:\n",
+    "    pickle.dump(history.history, output)\n",
+    "    \n",
+    "with open(f'./histories/attentive/results.csv', 'a') as file:\n",
+    "    min_epoch = np.argmin(history.history['val_loss'])\n",
+    "    file.write(f\"{timestamp}, {min_epoch}, {history.history['loss'][min_epoch]}, {history.history['val_loss'][min_epoch]}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2020-05-26 21:37:42]\tepoch: 0\tloss: 1.50508\tval_loss:1.27248\n",
-      "[2020-05-26 21:38:46]\tepoch: 1\tloss: 1.44169\tval_loss:1.19093\n",
-      "[2020-05-26 21:39:46]\tepoch: 2\tloss: 1.40479\tval_loss:1.36661\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f4180f84240>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.fit(x=[train_encoder_input_data, \n",
-    "            train_decoder_input_data,\n",
-    "            h0_train, c0_train], \n",
-    "          y=train_attentive_decoder_target_data,\n",
-    "          validation_data=([\n",
-    "            valid_encoder_input_data,\n",
-    "            valid_decoder_input_data, \n",
-    "            h0_val, c0_val],\n",
-    "            valid_attentive_decoder_target_data),\n",
-    "          batch_size=batch_size,\n",
-    "          epochs=3,\n",
-    "          verbose=0,\n",
-    "          callbacks=[EarlyStopping(monitor='val_loss', \n",
-    "                                  patience=patience, \n",
-    "                                  verbose=1),\n",
-    "                     LossPrintingCallback(Ty),\n",
-    "                     ModelCheckpoint('./checkpoints/attentive',\n",
-    "                                     save_weights_only=True,\n",
-    "                                     save_best_only=True),\n",
-    "                     TensorBoard(log_dir=\"./logs/attentive\", \n",
-    "                                 histogram_freq=1)]\n",
-    "         )"
+    "with open(f'./histories/attentive/{timestamp}.pkl', 'rb') as inp:\n",
+    "    history = pickle.load(inp)\n",
+    "\n",
+    "plt.figure(figsize=(15, 7))\n",
+    "plt.plot(history['loss'])\n",
+    "plt.plot(history['val_loss'])\n",
+    "plt.title('Model loss')\n",
+    "plt.ylabel('loss')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'val'], loc='upper right')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Attentive Inference Model\n",
+    "\n",
     "Now, load the best (trained) model, obtain the layers and build an inference model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +518,7 @@
     "                               attention_dense_dim, seq_dropout_rate,\n",
     "                               dense_dropout_rate, learning_rate)\n",
     "\n",
-    "best_model.load_weights('./checkpoints/attentive')\n",
+    "best_model.load_weights('./checkpoints/attentive/2020-06-03-13-47-21/cpt')\n",
     "\n",
     "# ----------------- PRETRAINED LAYERS -------------------\n",
     "# Encoder layers\n",
@@ -558,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,20 +598,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.607614"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred = inference_model.predict([test_encoder_input_data, test_decoder_input_data,\n",
     "                                  h0_test, c0_test])\n",
