Generalized 13. to work generically based on sensor value

--- a/13. evaluating.ipynb
+++ b/13. evaluating.ipynb
@@ -139,7 +139,7 @@
    "outputs": [],
    "source": [
     "latent_dim = 64\n",
-    "dense_dropout_rate = 0.25\n",
+    "dense_dropout_rate = 0\n",
     "learning_rate = 0.000219"
    ]
   },
@@ -204,13 +204,13 @@
     "                       valid_decoder_target_data),\n",
     "                    batch_size=64,\n",
     "                    epochs=100,\n",
-    "                    callbacks=[ModelCheckpoint(f'./checkpoints/standard/{timestamp}.h5', \n",
+    "                    callbacks=[ModelCheckpoint(f'./checkpoints/{sensor}/standard/{timestamp}.h5', \n",
     "                                               save_best_only=True)])\n",
     "\n",
-    "with open(f'./histories/standard/{timestamp}.pkl', 'wb') as output:\n",
+    "with open(f'./histories/{sensor}/standard/{timestamp}.pkl', 'wb') as output:\n",
     "    pickle.dump(history.history, output)\n",
     "    \n",
-    "with open(f'./histories/standard/results.csv', 'a') as file:\n",
+    "with open(f'./histories/{sensor}/standard/results.csv', 'a') as file:\n",
     "    min_epoch = np.argmin(history.history['val_loss'])\n",
     "    file.write(f\"{timestamp}, {min_epoch}, {history.history['loss'][min_epoch]}, {history.history['val_loss'][min_epoch]}\\n\")"
    ]
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'./histories/standard/{timestamp}.pkl', 'rb') as inp:\n",
+    "with open(f'./histories/{sensor}/standard/{timestamp}.pkl', 'rb') as inp:\n",
     "    history = pickle.load(inp)\n",
     "\n",
     "plt.figure(figsize=(15, 7))\n",
@@ -249,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_model = load_model('./checkpoints/standard/2020-06-03-13-44-14.h5')\n",
+    "best_model = load_model(f'./checkpoints/{sensor}/standard/2020-06-03-13-44-14.h5')\n",
     "\n",
     "encoder_lstm = best_model.get_layer('encoder_lstm')\n",
     "decoder_lstm = best_model.get_layer('decoder_lstm')\n",
@@ -490,14 +490,14 @@
     "                    epochs=15,\n",
     "                    verbose=0,\n",
     "                    callbacks=[LossPrintingCallback(Ty),\n",
-    "                               ModelCheckpoint(f'./checkpoints/attentive/{timestamp}/cpt',\n",
+    "                               ModelCheckpoint(f'./checkpoints/{sensor}/attentive/{timestamp}/cpt',\n",
     "                                               save_weights_only=True,\n",
     "                                               save_best_only=True)])\n",
     "\n",
-    "with open(f'./histories/attentive/{timestamp}.pkl', 'wb') as output:\n",
+    "with open(f'./histories/{sensor}/attentive/{timestamp}.pkl', 'wb') as output:\n",
     "    pickle.dump(history.history, output)\n",
     "    \n",
-    "with open(f'./histories/attentive/results.csv', 'a') as file:\n",
+    "with open(f'./histories/{sensor}/attentive/results.csv', 'a') as file:\n",
     "    min_epoch = np.argmin(history.history['val_loss'])\n",
     "    file.write(f\"{timestamp}, {min_epoch}, {history.history['loss'][min_epoch]}, {history.history['val_loss'][min_epoch]}\\n\")"
    ]
@@ -508,7 +508,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'./histories/attentive/{timestamp}.pkl', 'rb') as inp:\n",
+    "with open(f'./histories/{sensor}/attentive/{timestamp}.pkl', 'rb') as inp:\n",
     "    history = pickle.load(inp)\n",
     "\n",
     "plt.figure(figsize=(15, 7))\n",
@@ -540,7 +540,7 @@
     "                               attention_dense_dim, seq_dropout_rate,\n",
     "                               dense_dropout_rate, learning_rate)\n",
     "\n",
-    "best_model.load_weights('./checkpoints/attentive/2020-06-03-13-47-21/cpt')\n",
+    "best_model.load_weights(f'./checkpoints/{sensor}/attentive/2020-06-03-13-47-21/cpt')\n",
     "\n",
     "# ----------------- PRETRAINED LAYERS -------------------\n",
     "# Encoder layers\n",
