Added evaluation metrics

--- a/11. Generating third order datasets.ipynb
+++ b/11. Generating third order datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +37,12 @@
     "    \n",
     "    # Selecting the appropriate columns from the dataset\n",
     "    encoder_input_dataset = dataset.values.copy()\n",
-    "    decoder_input_dataset = dataset.drop(['PM25', 'PM10_missing', 'PM25_missing'],\n",
-    "                                         axis=1).values.copy()\n",
+    "    decoder_input_dataset = dataset.drop(['PM25', 'PM10_missing', 'PM25_missing', \n",
+    "                                          'cloud_cover', 'dew_point', 'humidity', \n",
+    "                                          'precip_intensity', 'precip_probability',\n",
+    "                                          'temperature', 'uv_index', 'visibility', \n",
+    "                                          'wind_speed', 'wind_bearing_sin', \n",
+    "                                          'wind_bearing_cos'], axis=1).values.copy()\n",
     "    decoder_target_dataset = dataset[['PM10']].values.copy()\n",
     "    decoder_missing_dataset = dataset[['PM10_missing']].values.copy()\n",
     "\n",
@@ -76,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
