--- a/13. evaluating.ipynb
+++ b/13. evaluating.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -63,9 +65,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import r2_score\n",
     "from datetime import datetime\n",
     "from utils import *\n",
-    "import pickle"
+    "import pickle\n",
+    "from collections import namedtuple"
    ]
   },
   {
@@ -79,16 +83,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sensor = 'Centar'"
+    "sensor = 'Miladinovci'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PretrainedModels = namedtuple('PretrainedModels', ['standard', 'attentive'])\n",
+    "best_models = {\n",
+    "    'Centar': PretrainedModels('2020-06-06-08-53-36', '2020-06-06-08-56-06'),\n",
+    "    'Karpos': PretrainedModels('2020-06-06-09-06-42', '2020-06-06-09-08-54'),\n",
+    "    'Lisice': PretrainedModels('2020-06-06-09-17-17', '2020-06-06-09-18-28'),\n",
+    "    'Rektorat': PretrainedModels('2020-06-06-09-28-19', '2020-06-06-09-29-38'),\n",
+    "    'Miladinovci': PretrainedModels('2020-06-05-17-52-45', '2020-06-05-17-55-40'),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retransform_data(scaler, data):\n",
+    "    data = scaler.inverse_transform(data)\n",
+    "    data = np.exp(data) - 1\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f'./pickles/scalers/{sensor}/PM10', 'rb') as f:\n",
+    "    scaler = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,12 +145,13 @@
     "test_encoder_input_data = np.load(f'./data/third-order/{sensor}/test_encoder_input_data.npy')\n",
     "test_decoder_input_data = np.load(f'./data/third-order/{sensor}/test_decoder_input_data.npy')\n",
     "test_decoder_target_data = np.load(f'./data/third-order/{sensor}/test_decoder_target_data.npy')\n",
-    "test_decoder_target_data = test_decoder_target_data.flatten()"
+    "test_decoder_target_data = test_decoder_target_data.flatten()\n",
+    "y_true_retransformed = retransform_data(scaler, test_decoder_target_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +248,10 @@
     "                    batch_size=64,\n",
     "                    epochs=100,\n",
     "                    callbacks=[ModelCheckpoint(f'./checkpoints/{sensor}/standard/{timestamp}.h5', \n",
-    "                                               save_best_only=True)])\n",
+    "                                               save_best_only=True),\n",
+    "                               EarlyStopping(monitor='val_loss', \n",
+    "                                             patience=10, \n",
+    "                                             verbose=1)])\n",
     "\n",
     "with open(f'./histories/{sensor}/standard/{timestamp}.pkl', 'wb') as output:\n",
     "    pickle.dump(history.history, output)\n",
@@ -245,11 +291,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_model = load_model(f'./checkpoints/{sensor}/standard/2020-06-03-13-44-14.h5')\n",
+    "timestamp = best_models[sensor].standard\n",
+    "best_model = load_model(f'./checkpoints/{sensor}/standard/{timestamp}.h5')\n",
     "\n",
     "encoder_lstm = best_model.get_layer('encoder_lstm')\n",
     "decoder_lstm = best_model.get_layer('decoder_lstm')\n",
@@ -259,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,14 +346,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_pred = inference_model.predict([test_encoder_input_data, test_decoder_input_data])\n",
     "y_pred = format_model_output(y_pred)\n",
-    "loss = K.eval(tf.keras.losses.mean_squared_error(test_decoder_target_data, y_pred))\n",
-    "loss"
+    "y_pred_retransformed = retransform_data(scaler, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Miladinovci\tArchitecture: standard\tRMSE: 40.64072036743164\tR^2: 0.23855493910746906\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmse = np.sqrt(K.eval(tf.keras.losses.mean_squared_error(y_true_retransformed, \n",
+    "                                                         y_pred_retransformed)))\n",
+    "r2 = r2_score(y_true_retransformed, y_pred_retransformed)\n",
+    "print(f'{sensor}\\tArchitecture: standard\\tRMSE: {rmse}\\tR^2: {r2}')"
    ]
   },
   {
@@ -320,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -423,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,12 +553,15 @@
     "                       h0_val, c0_val],\n",
     "                       valid_attentive_decoder_target_data),\n",
     "                    batch_size=64,\n",
-    "                    epochs=15,\n",
+    "                    epochs=100,\n",
     "                    verbose=0,\n",
     "                    callbacks=[LossPrintingCallback(Ty),\n",
     "                               ModelCheckpoint(f'./checkpoints/{sensor}/attentive/{timestamp}/cpt',\n",
     "                                               save_weights_only=True,\n",
-    "                                               save_best_only=True)])\n",
+    "                                               save_best_only=True),\n",
+    "                               EarlyStopping(monitor='val_loss', \n",
+    "                                             patience=10, \n",
+    "                                             verbose=1)])\n",
     "\n",
     "with open(f'./histories/{sensor}/attentive/{timestamp}.pkl', 'wb') as output:\n",
     "    pickle.dump(history.history, output)\n",
@@ -532,15 +601,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "timestamp = best_models[sensor].attentive\n",
+    "\n",
     "best_model = create_attentive_model(encoder_latent_dim, decoder_latent_dim,\n",
     "                               attention_dense_dim, seq_dropout_rate,\n",
     "                               dense_dropout_rate, learning_rate)\n",
     "\n",
-    "best_model.load_weights(f'./checkpoints/{sensor}/attentive/2020-06-03-13-47-21/cpt')\n",
+    "best_model.load_weights(f'./checkpoints/{sensor}/attentive/{timestamp}/cpt')\n",
     "\n",
     "# ----------------- PRETRAINED LAYERS -------------------\n",
     "# Encoder layers\n",
@@ -565,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,15 +691,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_pred = inference_model.predict([test_encoder_input_data, test_decoder_input_data,\n",
     "                                  h0_test, c0_test])\n",
     "y_pred = format_model_output(y_pred)\n",
-    "loss = K.eval(tf.keras.losses.mean_squared_error(test_decoder_target_data, y_pred))\n",
-    "loss"
+    "y_pred_retransformed = retransform_data(scaler, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Miladinovci\tArchitecture: attentive\tRMSE: 32.90631866455078\tR^2: 0.5008003717648755\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmse = np.sqrt(K.eval(tf.keras.losses.mean_squared_error(y_true_retransformed, \n",
+    "                                                         y_pred_retransformed)))\n",
+    "r2 = r2_score(y_true_retransformed, y_pred_retransformed)\n",
+    "print(f'{sensor}\\tArchitecture: attentive\\tRMSE: {rmse}\\tR^2: {r2}')"
    ]
   },
   {
