Removed cell outputs

--- a/06. Sensor datasets truncation.ipynb
+++ b/06. Sensor datasets truncation.ipynb
@@ -441,7 +441,12 @@
    ],
    "source": [
     "df_truncated = df.loc['2016-04-14 12:00:00':]\n",
-    "df_truncated.head(24)"
+    "df_truncated.head(24)import requests\n",
+    "import time\n",
+    "from datetime import datetime, timedelta\n",
+    "from pytz import timezone\n",
+    "from copy import deepcopy\n",
+    "import pandas as pd"
    ]
   },
   {
