Added files for automated data fetching, transformation, modeling and predicting

--- a/06. Sensor datasets truncation.ipynb
+++ b/06. Sensor datasets truncation.ipynb
@@ -2,24 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Bad key \"text.kerning_factor\" on line 4 in\n",
-      "/home/zafir/miniconda3/envs/tensorflow/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test_patch.mplstyle.\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.1.3/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np \n",
@@ -441,12 +428,7 @@
    ],
    "source": [
     "df_truncated = df.loc['2016-04-14 12:00:00':]\n",
-    "df_truncated.head(24)import requests\n",
-    "import time\n",
-    "from datetime import datetime, timedelta\n",
-    "from pytz import timezone\n",
-    "from copy import deepcopy\n",
-    "import pandas as pd"
+    "df_truncated.head(24)"
    ]
   },
   {
