--- a/12. modeling.ipynb
+++ b/12. modeling.ipynb
@@ -123,7 +123,13 @@
    },
    "outputs": [],
    "source": [
-    "model_builder = StandardSeq2Seq(Tx, Ty, encoder_input_dim, \n",
+    "Tx, encoder_input_dim = (train_encoder_input_data.shape[1], \n",
+    "                         train_encoder_input_data.shape[2])\n",
+    "    \n",
+    "Ty, decoder_input_dim = (train_decoder_input_data.shape[1], \n",
+    "                         train_decoder_input_data.shape[2])\n",
+    "\n",
+    "decoder_output_dim = train_decoder_target_data.shape[2]model_builder = StandardSeq2Seq(Tx, Ty, encoder_input_dim, \n",
     "                             decoder_input_dim, decoder_output_dim)\n",
     "\n",
     "tuner = RandomSearch(model_builder,\n",
