--- a/13. evaluating.ipynb
+++ b/13. evaluating.ipynb
@@ -269,7 +269,7 @@
    },
    "outputs": [],
    "source": [
-    "timestamp = datetime.now().strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
+    "ir-pollution-impl\"timestamp = datetime.now().strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
     "print(f'Starting training at: {timestamp}')\n",
     "\n",
     "history = model.fit(x=[train_encoder_input_data, \n",
